--- a/src/pages/bitstream.astro
+++ b/src/pages/bitstream.astro
@@ -8,7 +8,7 @@ import { getCollection, type CollectionEntry } from 'astro:content';
 const bitstream: CollectionEntry<'bitstream'>[] = await getCollection('bitstream');
 
 const col = [
-    {src: "/images/bitstreamcouncil/bitstreamcouncil2021.jpeg", caption:"Bitstream Team 2020-21"},
+    {src: "/images/bitstreamcouncil/bitstreamcouncil2021.jpeg", caption:"Bitstream Team 2020-21", size:[400,1200]},
 ]
 
 ---
