--- a/src/components/ProfileCard.astro
+++ b/src/components/ProfileCard.astro
@@ -1,5 +1,5 @@
 ---
-const {name,image,position} = Astro.props;
+const {name,image,position,email} = Astro.props;
 
 ---
 
@@ -8,6 +8,11 @@ const {name,image,position} = Astro.props;
     <div class="image-container">
         <img src={image} />
         <p class="position">{position}</p>
+        { email &&
+        <div class="overlay">
+            <p class="email">{email}</p>
+        </div>
+        }
     </div>
     <p class="name">{name}</p>
 </div>
@@ -51,5 +56,37 @@ const {name,image,position} = Astro.props;
         margin: 10px;
         text-align: center;
         font-family: "Jost" , sans-seriff;
+    }
+
+    .overlay{
+        position:absolute;
+        bottom:0px;
+        left:0px;
+        width:100%;
+        height: 0%;
+        background: rgba(0, 0, 0, 0.6);
+        transition: height 0.8s ease;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        pointer-events: none;
+    }
+    .image-container:hover .overlay{
+        height: 100%
+    }
+
+    .image-container:hover .email{
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    .email{
+        opacity: 0;
+        transform: translateY(20px);
+        color: white;
+        margin-bottom:20px;
+        font-size: 15px;
+        font-family: "Jost" , sans-serif;
+        transition: opacity 0.4s ease 0.4s, transform 0.4s ease 0.4s;
     }
 </style>
